--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -206,78 +206,93 @@
       "modal": {
         "overview": "نظرة عامة",
         "description": "الوصف",
-        "close": "إغلاق"
+        "close": "إغلاق",
+        "viewDemo": "عرض تجريبي مباشر"
       },
       "projects": [
         {
           "title": "التحقق من الهوية",
           "description": "قم بتحميل إثبات هويتك للتحقق من التداول.",
-          "image": "project_1.png"
+          "image": "project_1.png",
+          "deploymentUrl": "https://trading-platform-zir6.vercel.app"
         },
         {
           "title": "نظرة عامة على سوق الأسهم",
           "description": "عرض كبار الرابحين، كبار الخاسرين، واتجاهات السوق بالتفصيل.",
-          "image": "project_2.png"
+          "image": "project_2.png",
+          "deploymentUrl": "https://trading-platform-seven-omega.vercel.app"
         },
         {
           "title": "المحفظة وسجل المعاملات",
           "description": "إدارة محفظتك وعرض سجل المعاملات.",
-          "image": "project_3.png"
+          "image": "project_3.png",
+          "deploymentUrl": "https://trade-linkers.vercel.app"
         },
         {
           "title": "منصة التجارة الإلكترونية",
           "description": "حل حديث للتجارة الإلكترونية لشراء الكتب.",
-          "image": "project_4.png"
+          "image": "project_4.png",
+          "deploymentUrl": "https://boighor-front-s.vercel.app"
         },
         {
           "title": "مجموعة الكتب",
           "description": "تصفح وفلترا مجموعة واسعة من الكتب.",
-          "image": "project_5.png"
+          "image": "project_5.png",
+          "deploymentUrl": "https://birds-of-eden.vercel.app"
         },
         {
           "title": "تحليلات لوحة المعلومات",
           "description": "تصور البيانات مع الرسوم البيانية الشريطية والمخططات الخطية.",
-          "image": "project_6.png"
+          "image": "project_6.png",
+          "deploymentUrl": "https://orm-dash.vercel.app"
         },
         {
           "title": "إدارة السمعة",
           "description": "تحكم في سمعتك مع خدمات مخصصة.",
-          "image": "project_7.png"
+          "image": "project_7.png",
+          "deploymentUrl": "https://reputation-prime.vercel.app"
         },
         {
           "title": "عرض المنتجات",
           "description": "عرض تفصيلي للمنتجات مع لافتات ترويجية.",
-          "image": "project_9.png"
+          "image": "project_9.png",
+          "deploymentUrl": "https://trade-link-engineer-ltd.vercel.app"
         },
         {
           "title": "التسعير والاشتراك",
           "description": "خطط تسعير مرنة لتلبية احتياجات المستخدمين المختلفة.",
-          "image": "project_10.png"
+          "image": "project_10.png",
+          "deploymentUrl": "https://reputation-prime-ai.vercel.app"
         },
         {
           "title": "جهات الاتصال في الحساب",
           "description": "إدارة جهات الاتصال في الحساب وأذونات المستخدمين.",
-          "image": "project_11.png"
+          "image": "project_11.png",
+          "deploymentUrl": "https://orm-dash-brok.vercel.app"
         },
         {
           "title": "نظرة عامة على لوحة المعلومات",
           "description": "لوحة معلومات شاملة مع تحليلات متقدمة.",
-          "image": "project_12.jpeg"
+          "image": "project_12.jpeg",
+          "deploymentUrl": "https://ormdash-app.vercel.app"
         },
         {
           "title": "حاسبة تكاليف الانتقال",
           "description": "احسب تكاليف الانتقال باستخدام نموذج تفاعلي.",
-          "image": "project_13.jpeg"
+          "image": "project_13.jpeg",
+          "deploymentUrl": "https://moving-quote-newyork.vercel.app"
         },
         {
           "title": "إدارة العملاء",
           "description": "نظرة عامة على الحملات ومقاييس المشاركة للعملاء.",
-          "image": "project_14.png"
+          "image": "project_14.png",
+          "deploymentUrl": "https://reputation-form.vercel.app"
         },
         {
           "title": "لوحة ملخص الإجراءات",
           "description": "تتبع المهام والأنشطة والإنتاجية الشاملة.",
-          "image": "project_15.png"
+          "image": "project_15.png",
+          "deploymentUrl": "https://orm-seo.vercel.app"
         }
       ]
     },
