--- a/src/i18n/ja/translation.json
+++ b/src/i18n/ja/translation.json
@@ -204,78 +204,93 @@
       "modal": {
         "overview": "概要",
         "description": "説明",
-        "close": "閉じる"
+        "close": "閉じる",
+        "viewDemo": "ライブデモを見る"
       },
       "projects": [
         {
           "title": "本人確認",
           "description": "取引確認のために本人確認書類をアップロードしてください。",
-          "image": "project_1.png"
+          "image": "project_1.png",
+          "deploymentUrl": "https://trading-platform-zir6.vercel.app"
         },
         {
           "title": "株式市場の概要",
           "description": "トップゲイナー、トップルーザー、詳細な市場動向を確認。",
-          "image": "project_2.png"
+          "image": "project_2.png",
+          "deploymentUrl": "https://trading-platform-seven-omega.vercel.app"
         },
         {
           "title": "ウォレットと取引履歴",
           "description": "ウォレットを管理し、取引履歴を表示します。",
-          "image": "project_3.png"
+          "image": "project_3.png",
+          "deploymentUrl": "https://trade-linkers.vercel.app"
         },
         {
           "title": "Eコマースプラットフォーム",
           "description": "書籍購入のための最新のEコマースソリューション。",
-          "image": "project_4.png"
+          "image": "project_4.png",
+          "deploymentUrl": "https://boighor-front-s.vercel.app"
         },
         {
           "title": "書店コレクション",
           "description": "豊富な書籍コレクションを閲覧し、フィルタリングします。",
-          "image": "project_5.png"
+          "image": "project_5.png",
+          "deploymentUrl": "https://birds-of-eden.vercel.app"
         },
         {
           "title": "ダッシュボード分析",
           "description": "グループ化されたバーと折れ線グラフによるデータの可視化。",
-          "image": "project_6.png"
+          "image": "project_6.png",
+          "deploymentUrl": "https://orm-dash.vercel.app"
         },
         {
           "title": "評判管理",
           "description": "カスタマイズされたサービスで評判を管理します。",
-          "image": "project_7.png"
+          "image": "project_7.png",
+          "deploymentUrl": "https://reputation-prime.vercel.app"
         },
         {
           "title": "製品展示",
           "description": "詳細な製品表示とプロモーションバナー。",
-          "image": "project_9.png"
+          "image": "project_9.png",
+          "deploymentUrl": "https://trade-link-engineer-ltd.vercel.app"
         },
         {
           "title": "価格設定とサブスクリプション",
           "description": "さまざまなユーザーのニーズに合わせた柔軟な価格プラン。",
-          "image": "project_10.png"
+          "image": "project_10.png",
+          "deploymentUrl": "https://reputation-prime-ai.vercel.app"
         },
         {
           "title": "アカウント連絡先",
           "description": "アカウントの連絡先とユーザーの権限を管理します。",
-          "image": "project_11.png"
+          "image": "project_11.png",
+          "deploymentUrl": "https://orm-dash-brok.vercel.app"
         },
         {
           "title": "ダッシュボードの概要",
           "description": "高度な分析機能を備えた包括的なダッシュボード。",
-          "image": "project_12.jpeg"
+          "image": "project_12.jpeg",
+          "deploymentUrl": "https://ormdash-app.vercel.app"
         },
         {
           "title": "引越し費用計算機",
           "description": "直感的なフォームを使用して引越し費用を計算します。",
-          "image": "project_13.jpeg"
+          "image": "project_13.jpeg",
+          "deploymentUrl": "https://moving-quote-newyork.vercel.app"
         },
         {
           "title": "クライアント管理",
           "description": "クライアントキャンペーンとエンゲージメント指標の概要。",
-          "image": "project_14.png"
+          "image": "project_14.png",
+          "deploymentUrl": "https://reputation-form.vercel.app"
         },
         {
           "title": "アクションサマリーダッシュボード",
           "description": "タスク、アクティビティ、および全体的な生産性を追跡します。",
-          "image": "project_15.png"
+          "image": "project_15.png",
+          "deploymentUrl": "https://orm-seo.vercel.app"
         }
       ]
     },
