--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -34,7 +34,14 @@
     "financial": "المؤسسات المالية",
     "corporate": "حلول الشركات",
     "ecommerce": "التجارة الإلكترونية",
-    "hardware": "منتجات الأجهزة",
+    "hardware": "الأجهزة",
+    "hardwareProducts": "منتجات الأجهزة",
+    "exploreHardware": "اكتشف مجموعة واسعة من منتجات الأجهزة لدينا.",
+    "hardwareCategories": "فئات الأجهزة",
+    "laptop": "جهاز كمبيوتر محمول",
+    "printer": "طابعة",
+    "keyboard": "لوحة مفاتيح",
+    "mouse": "فأرة",
     "drones": "الطائرات بدون طيار",
     "career": "وظائف",
     "language": "اللغة"
