--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -34,7 +34,14 @@
     "financial": "আর্থিক প্রতিষ্ঠান",
     "corporate": "কর্পোরেট সমাধান",
     "ecommerce": "ই-কমার্স",
-    "hardware": "হার্ডওয়্যার পণ্য",
+    "hardware": "হার্ডওয়্যার",
+    "hardwareProducts": "হার্ডওয়্যার পণ্যসমূহ",
+    "exploreHardware": "আমাদের হার্ডওয়্যার পণ্যের বিস্তৃত পরিসর আবিষ্কার করুন।",
+    "hardwareCategories": "হার্ডওয়্যার বিভাগসমূহ",
+    "laptop": "ল্যাপটপ",
+    "printer": "প্রিন্টার",
+    "keyboard": "কীবোর্ড",
+    "mouse": "মাউস",
     "drones": "ড্রোন",
     "career": "ক্যারিয়ার",
     "language": "ভাষা"
