--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -34,7 +34,14 @@
     "financial": "Financial Institutions",
     "corporate": "Corporate Solutions",
     "ecommerce": "E-Commerce",
-    "hardware": "Hardware Products",
+    "hardware": "Hardware",
+    "hardwareProducts": "Hardware Products",
+    "exploreHardware": "Explore our wide range of hardware products.",
+    "hardwareCategories": "Hardware Categories",
+    "laptop": "Laptop",
+    "printer": "Printer",
+    "keyboard": "Keyboard",
+    "mouse": "Mouse",
     "drones": "Drones",
     "career": "Career",
     "language": "Language"
