--- a/src/i18n/ja/translation.json
+++ b/src/i18n/ja/translation.json
@@ -34,7 +34,14 @@
     "financial": "金融機関",
     "corporate": "企業向けソリューション",
     "ecommerce": "Eコマース",
-    "hardware": "ハードウェア製品",
+    "hardware": "ハードウェア",
+    "hardwareProducts": "ハードウェア製品",
+    "exploreHardware": "幅広いハードウェア製品をご覧ください。",
+    "hardwareCategories": "ハードウェアカテゴリ",
+    "laptop": "ラップトップ",
+    "printer": "プリンター",
+    "keyboard": "キーボード",
+    "mouse": "マウス",
     "drones": "ドローン",
     "career": "キャリア",
     "language": "言語"
