--- a/src/i18n/zh/translation.json
+++ b/src/i18n/zh/translation.json
@@ -34,7 +34,14 @@
     "financial": "金融机构",
     "corporate": "企业解决方案",
     "ecommerce": "电子商务",
-    "hardware": "硬件产品",
+    "hardware": "硬件",
+    "hardwareProducts": "硬件产品",
+    "exploreHardware": "探索我们广泛的硬件产品系列。",
+    "hardwareCategories": "硬件类别",
+    "laptop": "笔记本电脑",
+    "printer": "打印机",
+    "keyboard": "键盘",
+    "mouse": "鼠标",
     "drones": "无人机",
     "career": "职业",
     "language": "语言"
